objects/vlocity_ins__PriceList__c.object
<CustomObject>
    <description>Represents the tax and fee details for the insurance jurisdictions in which your company sell/offer the insurance products and services.</description>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <description>If rating type is amount, this field will hold the amount value.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfActiveEntries__c</fullName>
        <description>Count of active entries.This field rolls up the count of active price list entries present for this price list.</description>
        <label># of Entries</label>
        <summaryFilterItems>
            <field>vlocity_ins__PriceListEntry__c.vlocity_ins__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__PriceListEntry__c.vlocity_ins__PriceListId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__CurrencyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Price List. Used to identify the price list across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique price list identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRefundable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a price list is refundable.</description>
        <label>Refundable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Jurisdiction in which the price list is applicable.</description>
        <label>Jurisdiction Id</label>
        <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>PriceList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JurisdictionName__c</fullName>
        <description>Name of jurisdiction in which the price list is applicable.</description>
        <formula>vlocity_ins__JurisdictionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LoyaltyCode__c</fullName>
        <label>Loyalty Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__LoyaltyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentPriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipName>ChildPriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Percent__c</fullName>
        <description>If rating type is percentage, this field will hold the percentage value.</description>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureFormula__c</fullName>
        <description>If rating type is calculation or integration procedure, this field will hold the formula used to calculate the price list amount.</description>
        <label>Procedure Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureName__c</fullName>
        <description>If rating type is calculation or integration procedure, this field will hold the name of the procedure.</description>
        <label>Procedure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureSource__c</fullName>
        <description>If rating type is calculation or integration procedure, this field will hold the name of the variable that contains the calculated price list amount.</description>
        <label>Procedure Source Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingType__c</fullName>
        <description>How the price list will be calculated.</description>
        <label>Rating Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Calculation Procedure</fullName>
                </value>
                <value>
                    <fullName>Integration Procedure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Type of record.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax and Fee</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Vlocity_EPC_Price_List</fullName>
        <columns>vlocity_ins__IsActive__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__ParentPriceListId__c</columns>
        <columns>vlocity_ins__Code__c</columns>
        <columns>vlocity_ins__CountOfActiveEntries__c</columns>
        <columns>vlocity_ins__EffectiveFromDate__c</columns>
        <columns>vlocity_ins__EffectiveUntilDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>Vlocity EPC Price List</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxes and Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__EffectiveFromDate_Greater_UntilDate</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__EffectiveFromDate__c &gt; vlocity_ins__EffectiveUntilDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__EffectiveUntilDate__c</errorDisplayField>
        <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
    </validationRules>
</CustomObject>